# AutoDraft_2026

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_target.sh
.github/workflows/: publish.yml
autodraft/: __init__.py  config.py  engine.py  errors.py  local_runner.py  remote_client.py  target_server.py
chat_ui/: autodraft_service.py  bridge_target_server.py  main.py  probe_runner.py  recommendation_engine.py  server_registry.py
chat_ui/static/: app.js  index.html  style.css
data/: gsm8k.jsonl  gsm8k_test.jsonl  judge_prompts.jsonl
data/mt_bench/: question_server_only_ar_q38.jsonl  question_top1.jsonl  question_top10.jsonl
data/profile/: profile_draft_nvidia-geforce-rtx-5080_llama-2-7b-chat-hf_dq-8bit.json  profile_draft_nvidia-geforce-rtx-5080_llama-68m_dq-8bit.json  profile_draft_nvidia-geforce-rtx-5080_qwen2.5-0.5b-instruct_dq-4bit.json  profile_draft_nvidia-geforce-rtx-5080_qwen2.5-1.5b-instruct_dq-none.json  profile_target_autodraft_server_qwen2.5-14b-instruct_tq-none.json  profile_target_local_faker_qwen2.5-14b-instruct_tq-none.json  profile_target_server_llama-2-70b-chat-hf_tq-8bit.json  profile_target_server_llama-2-7b-chat-hf_tq-8bit.json  profile_target_server_qwen2.5-14b-instruct_tq-none.json
data/reference/: ref_autodraft_server_qwen2.5-14b-instruct_nvidia-geforce-rtx-5080_qwen2.5-1.5b-instruct_tq-none_dq-none_mt_bench_total_cost_blend_6dcf440d7de9.json  ref_local_faker_qwen2.5-14b-instruct_nvidia-geforce-rtx-5080_qwen2.5-1.5b-instruct_tq-none_dq-none_mt_bench_total_cost_blend_f1b9b1f30429.json  ref_server_llama-2-70b-chat-hf_nvidia-geforce-rtx-5080_llama-2-7b-chat-hf_tq-8bit_dq-8bit_mt_bench_total_cost_blend_acf808ce1639.json  ref_server_llama-2-7b-chat-hf_nvidia-geforce-rtx-5080_llama-68m_tq-8bit_dq-8bit_mt_bench_total_cost_blend_dd3d12e090de.json  ref_server_llama-2-7b-chat-hf_nvidia-geforce-rtx-5080_llama-68m_tq-none_dq-none_mt_bench_total_cost_blend_95685a249096.json  ref_server_qwen2.5-14b-instruct_nvidia-geforce-rtx-5080_qwen2.5-1.5b-instruct_tq-none_dq-none_mt_bench_total_cost_blend_d89e05ac1ff9.json
evaluation/: eval_autodraft_draft.py  eval_autodraft_draft_orin.py  eval_autodraft_target.py  overall_performance_draft_energy_humaneval_example.xml  overall_performance_total_cost_mt_bench_example.xml  run_main_experiment_overall_performance.sh  run_main_experiment_overall_performance_orin.sh
examples/: draft.py  target.py
opt_classic/: kv_cache.py  modeling_llama3_kv.py  modeling_llama_kv.py  modeling_qwen2_kv.py  modeling_qwen3_kv.py  tree.py  utils.py
